<resources>
    <string name="app_name" translatable="false">Dungeon Master</string>
    <string name="level">Nivel %1$d</string>
    <string name="upgrade">Mejorar</string>
    <string name="name">Nombre</string>
    <string name="job">Clase</string>
    <string name="start">Empezar</string>
    <string name="craft">Fabricar</string>
    <string name="startGame">Empezar partida</string>
    <string name="ranking">Ranking</string>
    <string name="settings">Ajustes</string>
    <string name="delRankings">Eliminar todos los registros</string>
    <string name="diffTitle">Dificultad</string>
    <string name="diffOp1">Activar modo facil</string>
    <string name="langTitle">Idioma</string>
    <string name="saveSettings">Guardar Ajustes</string>
    <string name="langOp1">Elige un idioma:</string>
    <string name="info">Informacion</string>
    <string name="upgArmor">Mejorar Armadura</string>
    <string name="craftItems">Fabricar objetos</string>
    <string name="inv">Inventario</string>
    <string name="repeatLvl">Repetir Nivel</string>
    <string name="nextLvl">Siguiente Nivel</string>
    <string name="playerName">Nombre del jugador</string>
    <string name="cancelSettings">Salir sin guardar</string>
    <string name="darkTitle">Modo Oscuro</string>
    <string name="darkOp1">Activar modo oscuro</string>
    <string name="tankJobName">Tanque</string>
    <string name="knightJobName">Caballero</string>
    <string name="assassinJobName">Asesino</string>
    <string name="spa">Español</string>
    <string name="eng">Ingles</string>
    <string name="settSavedMsg">Ajustes Guardados</string>
    <string name="contextDel">Borrar</string>
    <string name="vit">Vitalidad: %1$d</string>
    <string name="atk">Ataque: %1$d</string>
    <string name="def">Defensa: %1$d</string>
    <string name="qntyOnInv">Tienes: x%1$d</string>
    <string name="invTitle">Inventario de %1$s</string>
    <string name="craftable">Fabricable</string>
    <string name="needed">Necesitas:</string>
    <string name="emptyInv">El inventario esta vacio</string>
    <string name="exitGameTitle">Salir del juego</string>
    <string name="exitGameMsg">Quieres abandonar la partida actual y perder todo el progreso?</string>
    <string name="cancelOp">Cancelar</string>
    <string name="exitOp">Salir</string>
    <string name="itemName_wood">Madera</string>
    <string name="itemName_iron">Hierro</string>
    <string name="itemName_leaves">Hojas</string>
    <string name="itemName_rock">Piedra</string>
    <string name="clearRankingTitle">Borrar Ranking</string>
    <string name="clearRankingMsg">¿Quieres borrar todas las puntuaciones?</string>
    <string name="acceptOp">Aceptar</string>
    <string name="itemPreviewDialogTitle">Nivel %1$d Drops</string>
    <string name="lvlCompletedMsg">Nivel completado. Obtenidos objetos</string>
    <string name="entriesDeleted">Se han borrado los registros.</string>
    <string name="settingsSaved">Ajustes Guardados</string>
    <string name="itemName_wood2">Madera Reforzada</string>
    <string name="itemName_iron2">Acero</string>
    <string name="itemName_leaves2">Grupo de hojas</string>
    <string name="itemName_rock2">Roca</string>
    <string name="craftMax">Fabricar Max</string>
    <string name="itemsCurrentLevel">Objetos Nivel Actual</string>
    <string name="itemsNextLevel">Objetos Siguiente Nivel</string>
    <string name="statsInfo">Estadisticas</string>
    <string name="leaveGame">Abandonar</string>
    <string name="lvl0drops">En este nivel no hay objetos</string>
    <string name="itemsCrafted">Has fabricado %1$d objetos</string>
    <string name="itemCrafted">Has fabricado un objeto</string>
    <string name="player">Jugador</string>
    <string name="enemy">Enemigo</string>
    <string name="statsInfo2">Estadisticas Armadura</string>
    <string name="simpleDialogTitle">Mensaje</string>
    <string name="nameEmptyMsg">Introduce el nombre del personaje</string>
    <string name="gameOverTitle">Has Perdido</string>
    <string name="gameOverMessage">Tu personaje ha muerto y has perdido la partida.</string>
    <string name="lblBattleTitle">Registro de batalla</string>
    <string name="backOp">Volver</string>
    <string name="attackmsgPlayer">Ataque del jugador. Daño realizado: %1$d
    Vida Enemigo: %2$d/%3$d</string>
    <string name="attackmsgEnemy">Ataque del enemigo. Daño realizado: %1$d
    "Vida Jugador: %2$d/%3$d</string>
    <string name="msgLevelLost">Has muerto</string>
    <string name="msgLevelWon">Has derrotado al enemigo de este nivel</string>
</resources>