<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restZoneLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RestZoneActivity">


    <Button
        android:id="@+id/btnInventory"

        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/inv"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnUpgrade"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnUpgrade"

        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/upgArmor"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCraft"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCraft"

        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:text="@string/craftItems"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblGameLevel"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="serif"
        android:text="@string/level"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRepeatLevel"

        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:text="@string/repeatLvl"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblGameLevel" />

    <Button
        android:id="@+id/btnNextLevel"

        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/nextLvl"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRepeatLevel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:elevation="0dp"
        app:elevation="0dp"
        android:background="@null"
        app:rippleColor="@null"
        android:outlineProvider="none"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Info" />

</androidx.constraintlayout.widget.ConstraintLayout>